Fix: IE11 button width overflowing

--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -243,7 +243,7 @@
 		flex: 0 0 auto;
 
 		@include breakpoint( "<660px" ) {
-			flex: 0 0 100%;
+			flex: 1 1 100%;
 			margin-top: 20px;
 			text-align: center;
 		}
